# maestro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.json  itworks.txt  maestro.py  music_companion.py  sheets.py  sup  wp.py
.github/workflows/: ci.yml
WP51_ROOT/: output.txt  untitled.txt
data/chords/: a_i_iii_iv_v.json  a_i_iv_v.json  a_i_iv_vi_v.json  a_i_v_vi_iv.json  a_i_vi_iv_v.json  a_ii_v_i.json  a_ii_v_i_vi.json  a_vi_iv_i_v.json  ab_i_iii_iv_v.json  ab_i_iv_v.json  ab_i_iv_vi_v.json  ab_i_v_vi_iv.json  ab_i_vi_iv_v.json  ab_ii_v_i.json  ab_ii_v_i_vi.json  ab_vi_iv_i_v.json  b_i_iii_iv_v.json  b_i_iv_v.json  b_i_iv_vi_v.json  b_i_v_vi_iv.json  b_i_vi_iv_v.json  b_ii_v_i.json  b_ii_v_i_vi.json  b_vi_iv_i_v.json  bb_i_iii_iv_v.json  bb_i_iv_v.json  bb_i_iv_vi_v.json  bb_i_v_vi_iv.json  bb_i_vi_iv_v.json  bb_ii_v_i.json  bb_ii_v_i_vi.json  bb_vi_iv_i_v.json  c_i_iii_iv_v.json  c_i_iv_v.json  c_i_iv_vi_v.json  c_i_v_vi_iv.json  c_i_vi_iv_v.json  c_ii_v_i.json  c_ii_v_i_vi.json  c_vi_iv_i_v.json  (+56 more)
data/playlists/: favorites.json
data/scales/: a_blues.json  a_dorian.json  a_harmonic_minor.json  a_locrian.json  a_lydian.json  a_major.json  (+138 more)
docs/: architecture.md  cli.md  learning.md  playlists.md
examples/: ode_to_joy.txt
python/: README.md  maestro.py  wp.py  wp6.py
scripts/: yt_import.py
src/: cli.rs  config.rs  data.rs  importer.rs  keyboard.rs  lib.rs  main.rs  metronome.rs  midi.rs  model.rs  notes.rs  playlist.rs  practice.rs  progress.rs  songs.rs  staff.rs  theory.rs  tui.rs  user.rs
tests/: catalogue.rs
(+776 files in other folders)
