[package]
name = "maestro"
version = "0.8.0"
edition = "2021"
description = "Maestro — a terminal piano-learning companion (scales, chords, songs, MIDI)"
license = "MIT"
repository = "https://github.com/hectorMiranda/maestro"
readme = "README.md"

[features]
default = []
# Live MIDI device output + audio synthesis. Requires ALSA dev headers on Linux
# (libasound2-dev). Off by default so the core (scales/chords/songs/users) builds
# and tests run with no system audio dependencies.
midi = ["dep:midir", "dep:rodio"]

[lib]
name = "maestro"
path = "src/lib.rs"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
sha2 = "0.10"
crossterm = "0.27"
midly = "0.5"
lazy_static = "1"
midir = { version = "0.9", optional = true }
rodio = { version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3"
